--- a/pages/registration.html
+++ b/pages/registration.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/registration.css">
+    <title>Clothing</title>
 </head>
 
 <body id="body" class="">
     <!--Navbar start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-info-subtle " id="header">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./images/Decathlon_Logo.svg.png" class="img-fluid"
+            <a class="navbar-brand" href="../index.html"><img src="../images/Decathlon_Logo.svg.png" class="img-fluid"
                     style="width: 150px;" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -24,18 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav-container navbar-nav ms-auto mb-2 mb-lg-0 w-50">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Clothing</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/clothing.html"
+                            target="_blank">Clothing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Shoes</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Sport supply</a>
+                        <a class="nav-link active" href="../pages/shoes.html" target="_blank">Shoes</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Camping</a>
+                        <a class="nav-link active" href="../pages/sportsupply.html " target="_blank">Sport supply</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../pages/gymsupply.html " target="_blank">Gym</a>
                     </li>
                     <li class="nav-item">
                         <span class="badge text-bg-warning p-3" style="font-size: 16px; font-weight: bolder;">50%
@@ -45,24 +47,22 @@
                     <div class="theme-toggler-container my-2 mx-1 ">
                         <div class="theme-toggler-body">
                             <div class="theme-toggler-image d-flex ">
-                                <img src="./icons/light-mode.png" class="theme-icons align-item-center mx-1 activeth"
+                                <img src="../icons/light-mode.png" class="theme-icons align-item-center mx-1 activeth"
                                     id="img-light" alt="" onclick="lightMode()">
-                                <img src="./icons/night-mode.png" class="theme-icons align-item-center mx-1"
+                                <img src="../icons/night-mode.png" class="theme-icons align-item-center mx-1"
                                     id="img-dark" alt="" onclick="darkMode()">
                             </div>
                         </div>
                     </div>
-                    <script>
-                       
-                    </script>
+
 
                 </ul>
                 <ul class="nav-container navbar-nav ms-auto mb-2 mb-lg-0 w-25 d-flex justify-content-end">
                     <li>
-                        <a href="" class=" btn  p-2 m-2 signin-button">Sign in</a>
+                        <a href="../pages/registration.html" class=" btn  p-2 m-2 signin-button">Sign in</a>
                     </li>
                     <li>
-                        <a href="" class=" btn  p-2 m-2 login-button">Log in</a>
+                        <a href="../pages/login.html" class=" btn  p-2 m-2 login-button">Log in</a>
                     </li>
                 </ul>
             </div>
@@ -71,63 +71,198 @@
 
     <!--Navbar end-->
 
- <!--Start Footer -->
+    <!--registration form start-->
 
- <footer id="footer" class="">
-    <div class="footer-container">
-        <div class="footer-content">
-            <h3>Contact Us</h3>
-            <div class="contact">
-                <i class="far fa-envelope"></i>
-                <p><a href="mailto:Decathlon@gmail.com">Decathlon@gmail.com</a></p>
+    <section class="gradient-custom ">
+        <div class="container py-5 h-100 ">
+            <div class="row justify-content-center align-items-center h-100 ">
+                <div class="col-12 col-lg-9 col-xl-7">
+                    <div class="card shadow-2-strong card-registration reg-light" id="regform"
+                        style="border-radius: 15px;">
+                        <div class="card-body p-4 p-md-5">
+                            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Registration Form</h3>
+                            <form>
+
+                                <div class="row">
+                                    <div class="col-md-6 mb-4">
+
+                                        <div data-mdb-input-init class="form-outline">
+                                            <input type="text" id="firstName" class="form-control form-control-lg" />
+                                            <label class="form-label" for="firstName">First Name</label>
+                                        </div>
+
+                                    </div>
+                                    <div class="col-md-6 mb-4">
+
+                                        <div data-mdb-input-init class="form-outline">
+                                            <input type="text" id="lastName" class="form-control form-control-lg" />
+                                            <label class="form-label" for="lastName">Last Name</label>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-6 mb-4 d-flex align-items-center">
+
+                                        <div data-mdb-input-init class="form-outline datepicker w-100">
+                                            <input type="text" class="form-control form-control-lg" id="birthdayDate" />
+                                            <label for="birthdayDate" class="form-label">Birthday</label>
+                                        </div>
+
+                                    </div>
+                                    <div class="col-md-6 mb-4">
+
+                                        <h6 class="mb-2 pb-1">Gender: </h6>
+
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="femaleGender" value="option1" checked />
+                                            <label class="form-check-label" for="femaleGender">Female</label>
+                                        </div>
+
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="maleGender" value="option2" />
+                                            <label class="form-check-label" for="maleGender">Male</label>
+                                        </div>
+
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="otherGender" value="option3" />
+                                            <label class="form-check-label" for="otherGender">Other</label>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-6 mb-4 pb-2">
+
+                                        <div data-mdb-input-init class="form-outline">
+                                            <input type="email" id="emailAddress"
+                                                class="form-control form-control-lg" />
+                                            <label class="form-label" for="emailAddress">Email</label>
+                                        </div>
+
+                                    </div>
+                                    <div class="col-md-6 mb-4 pb-2">
+
+                                        <div data-mdb-input-init class="form-outline">
+                                            <input type="tel" id="phoneNumber" class="form-control form-control-lg" />
+                                            <label class="form-label" for="phoneNumber">Phone Number</label>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-12">
+
+                                        <select class="select form-control-lg">
+                                            <option value="1" disabled>Choose Interest</option>
+                                            <option value="2">Gym</option>
+                                            <option value="3">Sports</option>
+                                            <option value="4">Running</option>
+                                        </select>
+                                        <label class="form-label select-label">Choose Interest</label>
+
+                                    </div>
+                                </div>
+
+                                <div class="mt-4 pt-2">
+                                    <input data-mdb-ripple-init class="btn btn-primary btn-lg" type="submit"
+                                        value="Submit" />
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="contact">
-                <i class="fas fa-phone-volume"></i><a href="tel:99778855444">
-                    <p> 99778855444
-                </a></p>
-            </div>
-            <div class="contact">
-                <i class="fas fa-map-marker-alt"></i>
-                <p><a href="" target="blank">
-                        pune highway , wagholi pune Maharashtra </a>
-            </div>
-            </p>
         </div>
+    </section>
+    <!--registration form end-->
 
-        <div class="footer-content">
-            <h3>Quick Links</h3>
-            <ul class="list">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/aboutus.html">About Us</a></li>
-                <li><a href="./pages/clothing.html">Clothing</a></li>
-                <li><a href="./pages/gymsupply.html"></a>Gym Supplies</li>
-                <li><a href="./pages/shoes.html">Shoes</a></li>
+    <!--Start Footer -->
 
-            </ul>
-        </div>
-        <div class="footer-content">
-            <h3>Follow Us</h3>
-            <div class="social-media">
-                <ul>
-                    <li><a href="https://www.facebook.com" target="_blank"><i
-                                class="fa-brands fa-facebook-f"></i></a> </li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i
-                                class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-youtube"></i> </a></li>
+    <footer id="footer" class="" style="position:absolute;width: 100%;">
+        <div class="footer-container">
+            <div class="footer-content">
+                <h3>Contact Us</h3>
+                <div class="contact">
+                    <i class="far fa-envelope"></i>
+                    <p><a href="mailto:Decathlon@gmail.com">Decathlon@gmail.com</a></p>
+                </div>
+                <div class="contact">
+                    <i class="fas fa-phone-volume"></i><a href="tel:99778855444">
+                        <p> 99778855444
+                    </a></p>
+                </div>
+                <div class="contact">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p><a href="" target="blank">
+                            pune highway , wagholi pune Maharashtra </a>
+                </div>
+                </p>
+            </div>
+
+            <div class="footer-content">
+                <h3>Quick Links</h3>
+                <ul class="list">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../pages/aboutus.html">About Us</a></li>
+                    <li><a href="../pages/clothing.html">Clothing</a></li>
+                    <li><a href="../pages/gymsupply.html"></a>Gym Supplies</li>
+                    <li><a href="../pages/shoes.html">Shoes</a></li>
+
                 </ul>
             </div>
+            <div class="footer-content">
+                <h3>Follow Us</h3>
+                <div class="social-media">
+                    <ul>
+                        <li><a href="https://www.facebook.com" target="_blank"><i
+                                    class="fa-brands fa-facebook-f"></i></a> </li>
+                        <li><a href="https://www.instagram.com" target="_blank"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i> </a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
 
-</footer>
+    </footer>
 
-<!--End Footer-->
+    <!--End Footer-->
 
-<script src="https://kit.fontawesome.com/38442ccd2f.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-    <script src="./js/mainjs.js"></script>
+    <script src="https://kit.fontawesome.com/38442ccd2f.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="../js/mainjs.js"></script>
+
+    <script>
+        // Function for light mode
+        function switchLightMode() {
+            const regform = document.getElementById("regform");
+            regform.classList.add('reg-light');
+            regform.classList.remove('reg-dark');
+
+        }
+
+        // Function for dark mode
+        function switchDarkMode() {
+            const regform = document.getElementById("regform");
+            regform.classList.add('reg-dark');
+            regform.classList.remove('reg-light');
+        }
+
+        // Add event listeners for images
+        document.getElementById("img-light").addEventListener("click", switchLightMode);
+        document.getElementById("img-dark").addEventListener("click", switchDarkMode);
+    </script>
+
 </body>
 
 </html>
